[package]
name = "candle-gen-depth"
version = "0.0.0"
edition = "2021"
description = "Depth Anything V2 (DINOv2 ViT-S/14 + DPT head) monocular depth estimator for candle-gen — the Windows/CUDA sibling of mlx-gen-depth (epic 8236, sc-8413). A host-side ControlNet depth preprocessor (no Python/torch)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "depth-anything", "depth", "inference"]
categories = ["science"]

[dependencies]
# Core crate — re-exports gen_core + candle, so this provider links exactly one gen-core / candle
# build (single resolution; see scripts/check-gen-core-skew.sh).
candle-gen = { path = "../candle-gen" }
# Direct candle deps: the DINOv2 ViT backbone + DPT neck/head are a from-scratch port of the HF
# `transformers` `DepthAnythingForDepthEstimation` reference, built on candle-core / candle-nn
# primitives — the same workspace pin candle-gen uses → one candle build (no skew). This is a plain
# utility preprocessor (like candle-gen-face / candle-gen-sam3), NOT an inventory-registered generator,
# so it needs no `inventory` dep.
candle-core = { workspace = true }
candle-nn = { workspace = true }

[features]
# Pass the backend selection through to the core crate so a downstream `--features cuda`/`metal`
# selects the matching candle backend everywhere (the estimator runs f32 for parity; the device
# follows the build so the worker keeps one device across the depth-preprocessor pipeline).
default = []
metal = ["candle-gen/metal"]
cuda = ["candle-gen/cuda"]
flash-attn = ["candle-gen/flash-attn"]
