[package]
name = "candle-gen-face"
version = "0.0.0"
edition = "2021"
description = "Face-analysis stack (SCRFD detector + ArcFace embedder) for candle-gen — the Windows/CUDA sibling of mlx-gen-face. Implements the gen-core FaceEmbedder contract for the InstantID / PuLID identity ports (epic 5480, sc-5490)."
license = "Apache-2.0"
repository = "https://github.com/michaeltrefry/candle-gen"
keywords = ["candle", "cuda", "face", "arcface", "scrfd"]
categories = ["science"]

[dependencies]
# Core crate — re-exports gen_core + candle, so this provider links exactly one gen-core / candle
# build (single resolution; see scripts/check-gen-core-skew.sh).
candle-gen = { path = "../candle-gen" }
# Direct candle deps: the SCRFD backbone + ArcFace iresnet100 are custom (folded-BN biased convs,
# PReLU, per-channel affine) so they build on candle-core/candle-nn primitives, not a
# candle-transformers model. Same workspace pin candle-gen uses → one candle build (no skew).
candle-core = { workspace = true }
candle-nn = { workspace = true }

[features]
# Pass the backend selection through to the core crate so a downstream `--features cuda`/`metal` on
# this crate selects the matching candle backend everywhere (the face stack itself runs f32, but the
# device follows the build so InstantID/PuLID keep one device).
default = []
metal = ["candle-gen/metal"]
cuda = ["candle-gen/cuda"]
flash-attn = ["candle-gen/flash-attn"]
